fix: overflow navigation > expandable-button

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -1,64 +1,68 @@
 @import "../../../styles.scss";
 
 :host {
-  flex-shrink: 0;
-  width: 366px;
-
-  section {
-    height: 100%;
-    padding: 32px 30px;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    background-color: white;
-
-    .nav-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
-      .logo-btn {
+    flex-shrink: 0;
+    width: 366px;
+    section {
+        height: 100%;
+        padding: 32px 30px;
+        border-radius: 30px;
         display: flex;
-        align-items: center;
-        gap: 15px;
-
-        span {
-          font-size: 24px;
-          font-weight: 700;
-          line-height: 32.74px;
+        flex-direction: column;
+        gap: 25px;
+        background-color: white;
+        .nav-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            .logo-btn {
+                display: flex;
+                align-items: center;
+                gap: 15px;
+                span {
+                    font-size: 24px;
+                    font-weight: 700;
+                    line-height: 32.74px;
+                }
+            }
+            .new-message-btn {
+                padding: 8px;
+                &:hover {
+                    background-color: $violet-bright;
+                    border-radius: 30px;
+                }
+            }
         }
-      }
-
-      .new-message-btn {
-        padding: 8px;
-
-        &:hover {
-          background-color: $violet-bright;
-          border-radius: 30px;
+        .nav-main {
+            // max-height: 100%;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // gap: 25px;
+            max-height: calc(100% - 87px);
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto;
+            grid-row-gap: 25px;
+            app-expandable-button {
+                width: 100%;
+                min-height: 40px;
+                height: auto;
+                &.channel {
+                    grid-area: 1 / 1 / 2 / 2;
+                }
+                &.direct {
+                    grid-area: 2 / 1 / 3 / 2;
+                }
+            }
         }
-      }
+        .mobile-searchbar-wrapper{
+            display: none;
+        }
     }
-
-    .nav-main {
-      max-height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 25px;
-
-      app-expandable-button {
-        width: 100%;
-      }
-    }
-
-    .mobile-searchbar-wrapper{
-      display: none;
-    }
-  }
-
- 
 }
+
+
 @media screen and (max-width: 768px) {
 
   section{
